--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,11 @@ jobs:
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
       - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'yarn'
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Build + deploy
