--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           fetch-depth: 0
           token: '${{ secrets.GITHUB_TOKEN }}'
+          ref: ${{ github.head_ref }}
       - uses: oleksiyrudenko/gha-git-credentials@v2-latest
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
