--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -33,5 +33,8 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Deploy docs 
         run: yarn deploy:docs
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          yarn deploy:docs -- -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
