--- a/.github/workflows/test-docs.yml
+++ b/.github/workflows/test-docs.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Deploy docs 
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          yarn deploy:docs -- -u "github-actions-bot <support+actions@github.com>"
+          yarn deploy:docs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
