Fix package name parsing

--- a/packages/create-uis-template/package.json
+++ b/packages/create-uis-template/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "fs-extra": "^10.0.0",
-    "mustache": "^4.1.0"
+    "mustache": "^4.1.0",
+    "validate-npm-package-name": "^3.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13"
